Container2 CI Testing

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,5 +17,20 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'us-central1-docker.pkg.dev/cloud-428816/k8s/container2:latest']
 
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:latest'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        gcloud container clusters get-credentials k8s-assignment --zone us-central1-c --project cloud-428816
+
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:latest'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        kubectl set image deployment/container2-deployment container2=us-central1-docker.pkg.dev/cloud-428816/k8s/container2:latest
+        kubectl rollout status deployment/container2-deployment
+
 images:
   - 'us-central1-docker.pkg.dev/cloud-428816/k8s/container2:latest'
